# ssspeak-svn

trunk/: prj.el
trunk/jssspeak/: .classpath  .nbintdb  .project  ajc.sh  ant.sh  aspect.sh  build.xml
trunk/jssspeak/src/: .classpath  .project
trunk/jssspeak/src/org/nargila/util/: AsyncJob.java  AsyncJobRunnable.java  AsyncJobTest.java  DefaultJob.java  Event.java  EventHandler.java  EventHandlerManager.java  HtmlDocLoader.java  IOSessionServer.java  IOSessionWorker.java  Job.java  (+5 more)
trunk/jssspeak/test/: htmlbrowser.py  jython-dpg.sh  playtest.py  ssmlbrowser.py  synthtest.py  vcbrowser.py
trunk/jssspeak/test/data/html/: Mossad.html  wikipedia.org.Mossad.html
trunk/jssspeak/test/data/raw-wav/: audiofile_23897.hlnk  audiofile_23908.hlnk  audiofile_23919.hlnk  audiofile_23924.hlnk  audiofile_24031.hlnk  audiofile_24082.hlnk  audiofile_24093.hlnk  audiofile_24098.hlnk  audiofile_24108.hlnk  audiofile_24127.hlnk  audiofile_24152.hlnk  audiofile_24172.hlnk  audiofile_24188.hlnk  audiofile_24202.hlnk  audiofile_24212.hlnk  audiofile_24217.hlnk  audiofile_24223.hlnk  audiofile_24235.hlnk  audiofile_24240.hlnk  audiofile_24254.hlnk  audiofile_24260.hlnk  audiofile_24280.hlnk  preparing-for-speeking.raw
trunk/jssspeak/test/data/sable/: example.sable
trunk/jssspeak/test/data/ssml/: Mossad.ssml  simple.ssml  test.ssml  test2.ssml
trunk/libsphinx++/: .cdtproject  .project  AUTHORS  ChangeLog  autogen.sh  configure.in
trunk/libsphinx++/data/: Makefile.am  word2dic.py  words.dic
trunk/libsphinx++/src/: Makefile.am  RecognizerTest.cpp  RecognizerTest.sh  auto_ref.h  logger.h  mythread.h  sphinxhelper.c  sphinxhelper.h  spnxRecSession.cpp  spnxRecSession.h  spnxRecState.cpp  spnxRecState.h  spnxRecognizer.cpp  spnxRecognizer.h  spnxSphinxUtils.cpp  spnxSphinxUtils.h
trunk/libsphinx++/src/swig/: auto_ptr.i  auto_ref.i  ost.i  sphinxrec.i
trunk/libsphinx++/src/xpcom/: Makefile.am  nsISphinx.idl  nsSphinx.cpp  nsSphinx.h  nsSphinxModule.cpp  test.js
trunk/mozext/: common.mk  xpcom.mk
trunk/mozext/scripts/: classLoader.js  prefs.js  utilities.js
trunk/mozext/skin/: common.css
trunk/mozext/ssspeak/: Makefile  chrome.manifest  install.rdf
trunk/mozext/ssspeak/components/: Makefile  nsISsspeak.idl  nsISsspeak.xpt  nsSsspeak.js
trunk/mozext/ssspeak/defaults/preferences/: ssspeak.js
trunk/mozext/ssspeak/ext/: sound
trunk/mozext/ssspeak/ext/festival/: lib
trunk/mozext/ssspeak/ext/mbrola/: mbrlicen.html
trunk/mozext/ssspeak/ext/scripts/: helpers
trunk/mozext/ssspeak/xpcom/speak-voice/: Makefile  nsISsspeak.idl  nsSsspeak.js
trunk/mozext/xpcom/: .svn-commit.tmp.swp  Makefile  Makefile.in  nsIRecognizer.idl  nsISynthSrvListener.idl  nsISynthesizer.idl  nsSsspeakModule.cpp  nsSynthSrvListener.cpp  nsSynthSrvListener.h  nsSynthesizer.cpp  nsSynthesizer.h  shamssmlserver.sh  test.js
trunk/mozext/xpi-release/: zipedia-1.1.xpi
trunk/mozext/zipedia/: ChangeLog  Makefile  chrome.manifest  install.rdf
trunk/mozext/zipedia/components/: wikipedia-service.js  zpwkIWikiConvert.idl  zpwkIWikiConvert.xpt  zpwkIWikiData.idl  zpwkIWikiData.xpt  zpwkWikiConvert.js  zpwkWikiData.js
trunk/mozext/zipedia/defaults/preferences/: zipedia.js
trunk/mozext/zipedia/ext/linux/: zipediadump
trunk/mozext/zipedia/xpcom/wikiconv/: Makefile  zpwkIWikiConvert.idl  zpwkWikiConvert.js
trunk/mozext/zipedia/xpcom/wikidata/: Makefile  wikipedia-service.js  zpwkIWikiData.idl  zpwkWikiData.js
trunk/mozext/zipedia/xpcom/zipediadump/: .cdtbuild  .cdtproject  .project  DumpReader.cpp  DumpReader.h  Lockable.cpp  Lockable.h  Makefile  MonitorBlock.cpp  MonitorBlock.h  WikiDumpParser.cpp  WikiDumpParser.h  WikiZipPageWriter.cpp  WikiZipPageWriter.h  test.js  zipediadump.cpp  zpwkWikiDumpToZip.cpp  zpwkWikiDumpToZip.h  zpwkWikiDumpToZipModule.cpp
trunk/scripts/helpers/: env.sh  festistart.sh  html2mp3  html2speak  myfest  playraw.sh  raw2mp3  sable2mp3  sable2speak  sable2wav  sable2wav-wrap.sh  sable2wave  sablewav-play-arts.sh  sablewav-play-sox.sh  sablewav-play.sh  sphinx.sh
trunk/scripts/utils/: artsplayer.sh  click_filter.py  enc.py  raw2arts.sh  rawartsplay.sh  rec-chose.sh
trunk/xsl/: html2ssml.xml  html2ssml.xsl  ssml2marks.xsl  ssml2sable.xml  ssml2sable.xsl  wikipedia2html.xml  wikipedia2html.xsl
(+111 files in other folders)
